--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -63,7 +63,7 @@
 Teaching an AI to play a simple game has become an interesting research topic in the last couple of years. Games usually have a wide range of possible parameters to tune. Often times, simple neural networks can meet all the requirements and perform well. However, training the net often takes many hours or a few days. The training time can be reduced tremendously by using a neural nets in combination with a genetic algorith. In this paper we present how we applied a deep genetic algorithm on the game \quot{Doodle Jump}. We especially pay attention to the configuration of the genetic algorithm, describe the undertaken changes and show, which influence they have on the performance.
 \vskip 0.7cm
 \noindent \textbf{Keywords.} Deep Learning, Genetic Algorithm, Artificial Intelligence, Games
-
+\end{abstract}
 \newpage
 
 \section{Introduction}
