--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -158,16 +158,14 @@ For each fitness function, we monitored the learning process for the first 100 g
 \subsection{Mutation}
 \subsection{Retaining best candidates}
 
-After all games died with one generation we select the top players of this run and reuse them without any modification in the next generation. The amount of retained candidates depends on the performance of the current run compared with the previous one. However, the number of players kept is limited to the range of three to five out of sixteen. In order to explain it in detail we use an example which is depicted in graphic \ref{abb:retaining}. It shows the players of three generations sorted by fitness.
+After all games died with one generation we select the top players of this run and reuse them without any modification in the next generation. The amount of retained candidates depends on the performance of the current run compared with the previous one. However, the number of players kept is limited to the range of three to five out of sixteen. The reason, why we have such a complex algorithm is, that we want to a high amount of good players and throw away a large number of bad ones. In order to explain it in detail we use an example which is depicted in graphic \ref{abb:retaining}. It shows the players of three generations sorted by fitness.
 
 In the first generation we keep all top five players, since we can not compare them to another run. The only requirement is that the best player has a fitness of more than 0. Otherwise, we throw away the whole population due to the bad score.
 
-only 3
-4 worse than 5
+The second generation performs a little worse than the previous one. Hence, we will keep less candidates. First, we compare the top five players with the previous run. In this concrete example only two players are better than the last best five. We then also select the third player, because this is the minimum number of retained candidates. The main idea behind this lower limit is, that we do not want to throw away to many information.
 
-then 4 
-4 less than 3 doesnt matter, compare to all top 5
-prevents staying at 3 selected
+After the next run we compare the best players again. Since we always focus on the best five players, the number of reused candidates --- which us four now --- can increase again. That would not be the case, if we only compare the individuals with the previously retained ones. If we did that, we would have three bots and would stay at this number forever.
+
 \begin{figure}[h]
 \begin{center}
 \includegraphics*[width=0.8\textwidth]{images/retain_candidates}\\
