Add network layout image

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -147,6 +147,14 @@ During the development of our application we thought that one feature could help
 
 \section{Network Layout}
 
+\begin{figure}[h]
+\begin{center}
+\includegraphics*[width=0.75\textwidth]{images/network_layout}\\
+\caption{Layout of the neural network}
+\label{abb:nl}
+\end{center}
+\end{figure}
+
 \section{Genetic algorithm}
 \label{sec:ga}
 
